# arcadium

./: .gitignore  .gitmodules  CMakeLists.txt
rrc/shaders/: simple_shader.glsl  texture_shader.glsl
src/: arcadium.h  main.cpp
src/Core/: Application.cpp  Application.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  Timestamp.cpp  Timestamp.h  UserApplication.cpp  UserApplication.h  Window.cpp  Window.h
src/Renderer/: OrthographicCamera.cpp  Renderer.cpp  Renderer.h  Texture.h  VertexArrayObject.h  VertexBuffer.h
src/core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Event.h  UserApplication.cpp  UserApplication.h  Window.cpp  Window.h
src/render/: IndexBuffer.cpp  IndexBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  Render.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexBuffer.cpp
